--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "regenerate-unicode-properties": "^10.2.0",
     "styled-jsx": "^5.1.7"
   },
   "devDependencies": {
