--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^16.5.0",
     "mongoose": "^8.15.2",
     "next": "15.3.3",
     "react": "^19.0.0",
@@ -16,6 +18,7 @@
     "react-icons": "^5.5.0",
     "react-toastify": "^9.1.3",
     "regenerate-unicode-properties": "^10.2.0",
+    "resend": "^4.6.0",
     "styled-jsx": "^5.1.7"
   },
   "devDependencies": {
