--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^7.4.0",
     "bcryptjs": "^3.0.2",
     "cookie": "^1.0.2",
     "dotenv": "^16.5.0",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
+    "micro": "^10.0.1",
     "mongoose": "^8.15.2",
     "next": "15.3.3",
     "nprogress": "^0.2.0",
@@ -22,6 +27,7 @@
     "react-toastify": "^9.1.3",
     "regenerate-unicode-properties": "^10.2.0",
     "resend": "^4.6.0",
+    "stripe": "^18.2.1",
     "styled-jsx": "^5.1.7"
   },
   "devDependencies": {
