--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@stripe/stripe-js": "^7.4.0",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.5.0",
     "cookie": "^1.0.2",
     "dotenv": "^16.5.0",
     "js-cookie": "^3.0.5",
@@ -20,13 +22,17 @@
     "micro": "^10.0.1",
     "mongoose": "^8.15.2",
     "next": "15.3.3",
+    "node-fetch": "^3.3.2",
     "nprogress": "^0.2.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-slick": "^0.30.3",
     "react-toastify": "^9.1.3",
     "regenerate-unicode-properties": "^10.2.0",
     "resend": "^4.6.0",
+    "slick-carousel": "^1.8.1",
     "stripe": "^18.2.1",
     "styled-jsx": "^5.1.7"
   },
