--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.5.0",
     "cookie": "^1.0.2",
     "dotenv": "^16.5.0",
+    "formidable": "^3.5.4",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
